--- a/Gui/src/view/Gui.fxml
+++ b/Gui/src/view/Gui.fxml
@@ -7,46 +7,23 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Interfaz">
    <children>
       <SplitPane dividerPositions="0.29797979797979796" layoutX="117.0" layoutY="64.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TreeView layoutX="6.0" layoutY="14.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                  <TreeView fx:id="gran_arbol" layoutX="6.0" layoutY="14.0" onContextMenuRequested="#clicked" onMouseClicked="#clicked" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
                </children>
             </AnchorPane>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <GridPane layoutX="78.0" layoutY="31.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="30.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label />
-                        <Label GridPane.rowIndex="1" />
-                        <Label GridPane.rowIndex="2" />
-                        <Label GridPane.columnIndex="1" />
-                        <Label GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <Label GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label GridPane.rowIndex="3" />
-                        <Label GridPane.rowIndex="4" />
-                        <Label GridPane.rowIndex="5" />
-                        <Label GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                        <Label GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label GridPane.columnIndex="1" GridPane.rowIndex="5" />
-                     </children>
-                  </GridPane>
-                  <HBox layoutX="226.0" layoutY="259.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="264.0" AnchorPane.rightAnchor="10.0" />
+                  <Button fx:id="crear_JSONStore" layoutX="120.0" layoutY="244.0" mnemonicParsing="false" onAction="#crear_JSONStore" text="Crear Store" />
+                  <Button fx:id="crear_JSONdoc" layoutX="242.0" layoutY="243.0" mnemonicParsing="false" onAction="#crear_JSONdoc" text="Crear JSON" visible="false" />
+                  <Button fx:id="escribir_en_disco" layoutX="355.0" layoutY="268.0" mnemonicParsing="false" onAction="#commit" text="Commit" />
+                  <Button fx:id="read" layoutX="301.0" layoutY="268.0" mnemonicParsing="false" onAction="#leer" text="Read" />
+                  <Button fx:id="borrar_item" layoutX="14.0" layoutY="268.0" mnemonicParsing="false" onAction="#borrar" text="Delete" visible="false" />
+                  <Label fx:id="info" layoutX="59.0" layoutY="35.0" prefHeight="142.0" prefWidth="310.0" />
                </children>
             </AnchorPane>
         </items>
