--- a/Gui/src/view/Type.fxml
+++ b/Gui/src/view/Type.fxml
@@ -10,12 +10,12 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Ventana3Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfazTipo">
    <children>
       <Label layoutX="113.0" layoutY="43.0" text="Nombre del Tipo:" />
       <Label layoutX="113.0" layoutY="81.0" text="Cantidad de atributos:" />
-      <TextField id="nombreAtributo" layoutX="234.0" layoutY="39.0" />
-      <Button layoutX="257.0" layoutY="153.0" mnemonicParsing="false" onAction="#crearDocumento" text="Dar atributos" />
-      <TextField id="nombreAtributo" layoutX="234.0" layoutY="77.0" />
+      <TextField id="nombreAtributo" fx:id="definir_nombre" layoutX="234.0" layoutY="39.0" />
+      <Button fx:id="crear_tipo" layoutX="257.0" layoutY="153.0" mnemonicParsing="false" onAction="#tipo_ventana" text="Dar atributos" />
+      <TextField id="nombreAtributo" fx:id="cantidad_atributos" layoutX="234.0" layoutY="77.0" />
    </children>
 </AnchorPane>
