--- a/Gui/src/view/TypeAtributte.fxml
+++ b/Gui/src/view/TypeAtributte.fxml
@@ -10,14 +10,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Ventana3Controller">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="InterfazTipoAtributo">
    <children>
       <Label layoutX="113.0" layoutY="43.0" text="Nombre del Atributo:" />
-      <Label layoutX="113.0" layoutY="81.0" text="Valor de atributos:" />
-      <TextField id="nombreAtributo" layoutX="234.0" layoutY="39.0" />
-      <Button layoutX="275.0" layoutY="175.0" mnemonicParsing="false" onAction="#crearDocumento" text="Seguir" />
-      <TextField id="nombreAtributo" layoutX="234.0" layoutY="77.0" />
-      <TextField id="nombreAtributo" layoutX="234.0" layoutY="121.0" />
+      <Label layoutX="113.0" layoutY="81.0" text="Valor de atributo:" />
+      <TextField id="nombreAtributo" fx:id="nombre_atributo" layoutX="234.0" layoutY="39.0" />
+      <Button fx:id="crear_atributo" layoutX="275.0" layoutY="175.0" mnemonicParsing="false" onAction="#atributo_ventana" text="Seguir" />
+      <TextField id="nombreAtributo" fx:id="valor_por_defecto" layoutX="234.0" layoutY="77.0" />
+      <TextField id="nombreAtributo" fx:id="requerido" layoutX="234.0" layoutY="121.0" />
       <Label layoutX="113.0" layoutY="125.0" text="Requerido? si/no" />
    </children>
 </AnchorPane>
